sublime/ideal.cpp
@@ -289,6 +289,12 @@ void IdealButtonBarWidget::actionEvent(QActionEvent *event)
     case QEvent::ActionAdded: {
         if (! _buttons.contains(action)) {
             IdealToolButton *button = new IdealToolButton(_area);
+            //apol: here we set the usual width of a button for the vertical toolbars as the minimumWidth
+            //this is done because otherwise when we remove all the buttons and re-add new ones we get all
+            //the screen flickering. This is solved by not defaulting to a smaller width when it's empty
+            int w = button->sizeHint().width();
+            if(orientation()==Qt::Vertical && w>minimumWidth())
+                setMinimumWidth(w);
             _buttons.insert(action, button);
 
             button->setText(action->text());
